# Axiom

./: CITATIONS.md  PURPOSE.md  QUICKSTART.md  README.md  README_CN.md  USE_CASES.md  axiom-single.md  mindkit-single.md  pyproject.toml
.github/workflows/: ci.yml
brain/: ACTIVATE.md  AXIOM.md  CONTEXT.md  EPISODES.md  FOCUS.md  INTUITION.md  RULES.md  THINK.md  THINKKIT.md
brain/domains/: _TEMPLATE.md  example_creative_writing.md  example_software_dev.md
examples/: skill-integration.md
tools/: __init__.py  domain_generator.py  sync_manager.py  validator.py
