[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindkit"
version = "2.1.0"
description = "Zero-dependency cognitive engineering framework for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "RingLingo", email = "ringlingo@example.com"}
]
keywords = [
    "ai",
    "llm",
    "prompt-engineering",
    "cognitive-framework",
    "claude-code",
    "cursor",
    "memory",
    "attention",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mindkit-validate = "tools.validator:main"
mindkit-domain = "tools.domain_generator:main"
mindkit-sync = "tools.sync_manager:main"

[project.urls]
Homepage = "https://github.com/RingLingo/mindkit"
Repository = "https://github.com/RingLingo/mindkit"
Issues = "https://github.com/RingLingo/mindkit/issues"
Changelog = "https://github.com/RingLingo/mindkit/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
